[project]
name = "worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Zh4o",email = "zhaoliangm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq (>=0.26.3,<0.27.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.0,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
